--- a/sales-dashboard/package.json
+++ b/sales-dashboard/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^19.2.0",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.4.18",
+    "vercel": "^48.4.1",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
   },
